// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dataset details panel component renders calculate size button when size has not been calculated 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="datasets.details.tabs_label"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="dataset-details-panel"
      id="dataset-details-tab"
      label="datasets.details.label"
      value="details"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="dataset-details-tab"
    hidden={false}
    id="dataset-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.name
        :
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.description
        :
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.start_date
        :
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.end_date
        :
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.size
        :
      </b>
       
      <WithStyles(ForwardRef(Button))
        color="primary"
        id="calculate-size-btn"
        onClick={[Function]}
        size="small"
        variant="outlined"
      >
        datasets.details.calculate
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Typography))>
  </div>
</div>
`;

exports[`Dataset details panel component renders correctly 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="datasets.details.tabs_label"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="dataset-details-panel"
      id="dataset-details-tab"
      label="datasets.details.label"
      value="details"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="dataset-details-tab"
    hidden={false}
    id="dataset-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.name
        :
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.description
        :
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.start_date
        :
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.end_date
        :
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.size
        :
      </b>
       
      <WithStyles(ForwardRef(Button))
        color="primary"
        id="calculate-size-btn"
        onClick={[Function]}
        size="small"
        variant="outlined"
      >
        datasets.details.calculate
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Typography))>
  </div>
</div>
`;

exports[`Dataset details panel component renders type tab when present in the data 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="datasets.details.tabs_label"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="dataset-details-panel"
      id="dataset-details-tab"
      label="datasets.details.label"
      value="details"
    />
    <WithStyles(ForwardRef(Tab))
      aria-controls="dataset-type-panel"
      id="dataset-type-tab"
      label="datasets.details.types.label"
      value="type"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="dataset-details-tab"
    hidden={false}
    id="dataset-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.name
        :
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.description
        :
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.start_date
        :
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.end_date
        :
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.size
        :
      </b>
       
      <WithStyles(ForwardRef(Button))
        color="primary"
        id="calculate-size-btn"
        onClick={[Function]}
        size="small"
        variant="outlined"
      >
        datasets.details.calculate
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Typography))>
  </div>
  <div
    aria-labelledby="dataset-type-tab"
    hidden={true}
    id="dataset-type-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.type.name
        :
      </b>
       
      Test type
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        datasets.details.type.description
        :
      </b>
       
      Test type description
    </WithStyles(ForwardRef(Typography))>
  </div>
</div>
`;
